--- a/index.html
+++ b/index.html
@@ -5,55 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Land Page</title>
+    <script src="https://kit.fontawesome.com/bfb1c60c0a.js" crossorigin="anonymous"></script>
     <style>
 #Navbar{
     width: 100%;
     height: 75px;
-    border: 1px solid red;
-    margin-bottom: 10px;
     background-color: white;
     display: flex;
+    box-shadow:black(0, 0, 0, 0.35) 0px 5px 15px;
+    justify-content: space-between;
+    margin-bottom: 20px;
 
 }
 #first{
-text-align: center;
-padding-left: 20px;
+    padding: 10px 10px 10px 10px;
+    height: 100%;
+    width: 180px;
+    color: #e5b95f;
+    font-size: 21px;
 }
 #logo{
+    height: 100%;
+    width: 210px;
+}
+#logo>img{
+    height: 82%;
+    width: 100%;
+    margin-top: 10px;
+}
+#tools{
+    height: 100%;
+    width: 200px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 37px;
+    color: #e5b95f;
 
 }
-#searchbar{
-
+#tools>div>img{
+    height: 50%;
+    width: 50%;
 }
 
 #display{
-   border: 1px solid blue;
    margin-top: 0px;
    width: 100%;
-   height: 400px;
+   height: 520px;
+}
+#display>img{
+    width: 100%;
+   height: 100%;
+
 }
 .heading{
    text-align: center;
-   margin: 40px 0px 40px 0px;
+   margin: 80px 0px 25px 0px;
+   font-size: 45px;
+}
+.shubh{
+    border:1px solid #e5b95f;
+    width: 25%;
+    margin: auto;
+    background-color:#e5b95f ; /
 }
 #boxsa{
-   width: 98%;
-   height: 350px;
+   width: 100%;
+   height: 450px;
  display: flex;
-   
+ 
 }
 .mas{
   width: 23%;
-  height: 100%;
-  border: 1px solid black;
+  height: 70%;
+  text-align: center;
+  font-size: large;
   margin: auto;
+  border: 3px solid rgb(229, 185, 95);
+  border-radius: 20px;
+}
+.mas>img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
 }
 #plan{
   width: 55%;
   height: 500px;
-  
   margin: auto;
   display: flex;
+  margin-top: 20px;
 
 }
 .subsc{
@@ -64,22 +104,31 @@ padding-left: 20px;
 }
 #prebox{
   text-align: center;
-  margin: 100px 0px 40px 0px;
+  margin: 100px 0px 20px 0px;
 }
 #prod{
   display: grid;
   width: 86%;
   height: 300px;
-
   margin: auto;
   display: flex;
   margin-bottom: 30px;
+  margin-top: 40px;
 }
 .school{
 width: 22%;
 height: 100%;
-border: 1px solid red;
 margin: auto;
+text-align: left
+}
+.school>img{
+    width: 100%;
+    height: 70%;
+
+}
+.price{
+    color: gray;
+    
 }
 #test{
 width: 100%;
@@ -87,110 +136,163 @@ height: 400px;
 border: 1px solid teal;
 background-color: rgb(244, 229,195);
 text-align: center;
+margin-bottom: 40px;
 
 }
 #trend{
 text-align: center;
+margin: 50px 0px 50px 0px;
+
 }
 #trendbox{
-border: 1px solid green;
 width: 100%;
-height: 180px;
+height: 220px;
 margin-bottom: 20px;
+display: flex;
+}
+.sub{
+    width: 12.5%;
+    height: 100%;
+    margin: auto;  
+}
+.sub>img{
+    width: 100%;
+    height: 100%;
 }
 #lastbox{
 
-border: 1px solid red;
+border: 1px solid rgb(229,185,95);
 width:100%;
-height: 200px;
+height: 250px;
 background-color: rgb(229,185,95);
+margin-top: 70px;
 }
+#ugh{
+width: 70%;
+height: 70%;
+margin: auto;
+margin-top: 37px;
+display: flex;
+justify-content: space-evenly;
+}
+.sach{
+    width: 15%;
+    height: 100%;
+    
+}.sach>img{
+    width: 100%;
+    height: 100%;
+}
+
     </style>
 </head>
 <body>
 <div id="Navbar">
     <div id="first">
-        <h2>SUBSCRIBE NOW</h2>
+        <p> <b> SUBSCRIBE NOW </b></p>
     </div>
     <div id="logo">
-        <img src="" alt="">
+        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/FABBAG-LOGO_96ac9306-4c81-4ab8-8d2b-4e818eed7f76_2048x.png?v=1606482289" alt="Fab bag">
     </div>
-    <div id="searchbar">
-
+    <div id="tools">
+    <div>
+        <i class="fa-solid fa-magnifying-glass"></i>
     </div>
+    <div>
+        <i class="fa-solid fa-heart"></i>
+    </div>
+    <div>
+        <i class="fa-solid fa-circle-user"></i>
+    </div>
+    <div>
+        <i class="fa-solid fa-cart-shopping"></i>
+    </div>
+</div>
 </div>
 <div id="display">
-    <img src="" alt="">
+    <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Women_sPage-2---Skincare-3.gif?v=1655088937" alt="">
 </div>
 
-<h1 class="heading">WHAT'S IN THE BAG</h1>
+<h1 class="heading"> WHAT'S IN THE BAG </h1>
+<div class="shubh"></div>
 
 <div id="boxsa">
     <div class="mas">
-        <img src="" alt="">
-        <p></p>
+        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag-Makeup-Reveal-1_1_f966e732-fa52-4f58-b117-b4ff2b57b163_2048x.png?v=1654234899" alt="">
+        <p>PLUME PLUSH MATTE LIPSTICK OF YOUR CHOICE!*</p>
     </div>
     <div class="mas">
-        <img src="" alt="">
-        <p></p>
+        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag-Makeup-Reveal-02_2048x.gif?v=1654408628" alt="">
+        <p>C2P PRO EPIC LIP INK SET OR E'CLAT FADEOUT PIGMENT CORRECTING SERUM OR TEEN CEREMONIAL MAKEUP 8 COLOR EYESHADOW KIT* </p>
     </div>
     <div class="mas">
-        <img src="" alt="">
-        <p></p>
+        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag--Skincare-Reveal-1_e0d6e35d-42cf-410b-9a92-eb0525b4e65c_2048x.png?v=1654580730" alt="">
+        <p>THE SOAP COMPANY INDIA FOOT THERAPY</p>
     </div>
     <div class="mas">
-        <img src="" alt="">
-        <p></p>
+        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag--Skincare-Reveal-2_e505577a-ac80-4632-aaf1-f125466e35aa_2048x.png?v=1654754547" alt="">
+        <p>BAISER INDIA EYE BROW GROWTH OIL</p>
     </div>
 </div>
 
 <h1 class="heading">SUBSCRIPTION</h1>
+<div class="shubh"></div>
 
 <div id="plan">
     <div class="subsc"></div>
     <div class="subsc"></div>
 </div>
 <h1 id="prebox">PREVIOUS BAGS</h1>
+<div class="shubh"></div>
 
 <div id="prod">
     <div class="school">
-        <img src="" alt="">
-        <p></p>
-        <p></p>
+        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Skincare-2-With-BONUS_large.gif?v=1652238042" alt="">
+        <p>May'22 The AweSummer May Fab Bag</p>
+        <p class="price"><i>From</i> Rs.599.00</p>
     </div>
   <div class="school">
-      <img src="" alt="">
-      <p></p>
-      <p></p>
+      <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Women_sPage-Skincare-Reveal-3_1728264b-2e0f-4314-9a3c-0fde458d72a7_large.png?v=1649483317" alt="">
+      <p>Apr'22 The Sassy Spring Fab Bag</p>
+      <p class="price"> <i>From</i> Rs.599.00</p>
   </div>
   <div class="school">
-      <img src="" alt="">
-      <p></p>
-      <p></p>
+      <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Women_sPage-Skincare-Reveal-3_large.png?v=1646971494" alt="">
+      <p>Mar'22 The Empow-HER Fab Bag</p>
+      <p class="price"><i>From</i> Rs.599.00</p>
   </div>
   <div class="school">
-      <img src="" alt="">
-      <p></p>
-      <p></p>
+      <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Women_sPage-Skincare-Reveal-2_large.gif?v=1644395072" alt="">
+      <p>Feb'22 The Colour Me Cupid Fab Bag</p>
+      <p class="price"><i>From</i> Rs.599.00</p>
   </div>
 </div>
   <div id="test">
      <h1>TESTIMONIALS</h1>
+     <div class="shubh"></div>
      <p></p>
   </div>
 
     <h2 id="trend">#TRENDINGNOW AT THE GOSSIP CORNER</h2>
     <div id="trendbox">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/287781826_547870406890584_2509560218106568808_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=7xsZH9KKXrQAX8okPe5&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT-OKpbtxEQNLkPUPbqbLRiqW_Mj3KYlkCFKhlZ3ke_ejw&oe=62AF21AC" alt=""></div>
+        <div class="sub"> <img src="https://scontent.cdninstagram.com/v/t51.2885-15/288247736_344934671045738_5787529531618953693_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=rzSPMw0DZsEAX-x9oPT&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT_gz3A2S6AhhF6zz2HtkQ-lj3ovgQhL3Gbzp4KKTzkrzw&oe=62AF6153" alt=""></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/287055846_612188326492102_1064014851967458744_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=5I7S_K955DwAX-GUnlG&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT-ASLx2KePZ_f6rqWL3kzk6k7j_fUKb3hpWHzsFu0Ql-w&oe=62AF0E71" alt=""></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/287097304_726198465345873_7443026387775070717_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=KNZ9vM84kxAAX9HpmNh&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT81aoWHe0JpQSdSf4QU55j5oCsrOHK9tX8e1BvlPdEmcg&oe=62AE31AD" alt=""></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/286812898_1148851382630584_8489032068582175399_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=ii-RxMKaJg4AX_hmpAx&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT8_-tQmMbSNxp5S8LN8_xExzv8HuOCNoLCryiD3S5GpLQ&oe=62AECC88" alt=""></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/287055594_552052039955440_1019336681180280098_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=AbuMzRfFGesAX-M5Lhy&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT9uemn5UTbxP40oTyiut81DB0BbYdkB4kTXmiG9Ah12ww&oe=62AFC527" alt=""></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/287192209_739169030601627_5829339545655363575_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=VelIt7hSoL0AX-XMLIp&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT9IjO8vu0DnLBjaJUvw11ytgFUvSP9eUKN3gwr_ux_2KA&oe=62AEBB4E" alt=""></div>
+        <div class="sub"><img src="https://scontent.cdninstagram.com/v/t51.2885-15/287019583_342642551349115_2095504123262142509_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=5kb7nw_hMcsAX_b73Pp&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AT96_tBuz1VhLTpsuw5oo1syyeG691iNKX8xX8aj8CeIgg&oe=62AF2D26" alt=""></div>
     </div>
-<div id="lastbox"></div>
+<div id="lastbox">
+    <div id="ugh">
+    <div class="sach"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/WOC_Beauty_Logo_160x160.jpg?v=1602225835" alt=""></div>
+    <div class="sach"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/Baiser_India_Logo_160x160.jpg?v=1625063066" alt=""></div>
+    <div class="sach"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/LLW1vAyf_400x400_36a490d2-defb-4c90-898d-2af5215e8433_160x160.jpg?v=1578730298" alt=""></div>
+    <div class="sach"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/brick-new-york-with-symbol-white_46f7f93d-9ac3-4a6b-8827-7341564c001c_160x160.png?v=1599126230" alt=""></div>
+    <div class="sach"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/LLW1vAyf_400x400_36a490d2-defb-4c90-898d-2af5215e8433_160x160.jpg?v=1578730298" alt=""></div>
+</div>
+</div>
 </body>
 </html>
 <script >
