--- a/index.html
+++ b/index.html
@@ -6,7 +6,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Land Page</title>
     <style>
-       
+#Navbar{
+    width: 100%;
+    height: 75px;
+    border: 1px solid red;
+    margin-bottom: 10px;
+    background-color: white;
+    display: flex;
+
+}
+#first{
+text-align: center;
+padding-left: 20px;
+}
+#logo{
+
+}
+#searchbar{
+
+}
+
+#display{
+   border: 1px solid blue;
+   margin-top: 0px;
+   width: 100%;
+   height: 400px;
+}
+.heading{
+   text-align: center;
+   margin: 40px 0px 40px 0px;
+}
+#boxsa{
+   width: 98%;
+   height: 350px;
+ display: flex;
+   
+}
+.mas{
+  width: 23%;
+  height: 100%;
+  border: 1px solid black;
+  margin: auto;
+}
+#plan{
+  width: 55%;
+  height: 500px;
+  
+  margin: auto;
+  display: flex;
+
+}
+.subsc{
+  width: 43%;
+  height: 100%;
+  border: 1px solid blueviolet;
+  margin: auto;
+}
+#prebox{
+  text-align: center;
+  margin: 100px 0px 40px 0px;
+}
+#prod{
+  display: grid;
+  width: 86%;
+  height: 300px;
+
+  margin: auto;
+  display: flex;
+  margin-bottom: 30px;
+}
+.school{
+width: 22%;
+height: 100%;
+border: 1px solid red;
+margin: auto;
+}
+#test{
+width: 100%;
+height: 400px;
+border: 1px solid teal;
+background-color: rgb(244, 229,195);
+text-align: center;
+
+}
+#trend{
+text-align: center;
+}
+#trendbox{
+border: 1px solid green;
+width: 100%;
+height: 180px;
+margin-bottom: 20px;
+}
+#lastbox{
+
+border: 1px solid red;
+width:100%;
+height: 200px;
+background-color: rgb(229,185,95);
+}
     </style>
 </head>
 <body>
