--- a/signin.html
+++ b/signin.html
@@ -5,47 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-#break-login{
-   width: 100%; 
-   text-align: center; 
-   border-bottom: 1px solid #000; 
-   line-height: 0.1em;
-   margin: 10px 0 20px; 
-} 
-
-#break-login>span { 
-    background:#fff; 
-    padding:0 10px; 
-}
-
-    </style>
+    <script src="https://kit.fontawesome.com/ce38e0eef3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="signin.css">
 </head>
 <body>
-    <div id="gs_login_social">
-        <h1>Sign In</h1>
-        <div id="gs_social">
-            <a href="" id="facebook">
-               <p>Sign in with Facebook<span>F</span></p>
+    <div id="gautam">
+        <div class="sonk"><h1>Sign In</h1></div>
+        <div class="sonks">
+            <a href="https://www.facebook.com/">
+                <span>Sign in with Facebook</span>
+                <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="" id="google">
-                <p>Sign in with Google<span>G</span></p>
+            
+        </div>
+        <div class="sonks">
+            <a href="">
+                <span>Sign in with Google</span>
+                <i class="fa-brands fa-google"></i>
             </a>
         </div>
-    <div id="gs_login">
-        <form id="gform">
-            <p>Email Address <span>*</span></p>
-            <input id="email" type="email" name="email" >
-            <p>Password <span>*</span></p>
-            <input id="password" type="password" name="password">
-            <p id="req">* Required Fields <span>Forget your password</span></p>
-            <input type="submit" value="Sign in">
-        </form>
-        <p id="break-login"><span>or</span> </p>
-        <button> Creat an Account</button>
-
-
+        <div id="sonkp">
+            <form id="gform">
+                <p>Email Address <span>*</span></p>
+                <input id="email" type="email" name="email" >
+                <p>Password <span>*</span></p>
+                <input id="password" type="password" name="password">
+                <p id="req">Required Fields <span>*</span><span style="color: #7A7A7A; margin-left: 30%;">Forget your password</span></p>
+                <input type="submit" value="Sign in">
+            </form>
+        </div>
+        <div class="breakdiv"><p id="break-login"><span>or</span> </p></div>
+        <div class="son"><button> Creat an Account</button></div>
     </div>
 </body>
 </html>
