--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     border:1px solid #e5b95f;
     width: 25%;
     margin: auto;
-    background-color:#e5b95f ; /
+    background-color:#e5b95f;
 }
 #boxsa{
    width: 100%;
