--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Land Page</title>
     <script src="https://kit.fontawesome.com/bfb1c60c0a.js" crossorigin="anonymous"></script>
-    <style>
-#Navbar{
+    <a href="home_page.css"></a>
+   <style>
+    #Navbar{
     width: 100%;
     height: 75px;
     background-color: white;
@@ -66,7 +67,7 @@
     border:1px solid #e5b95f;
     width: 25%;
     margin: auto;
-    background-color:#e5b95f ; /
+    background-color:#e5b95f ; 
 }
 #boxsa{
    width: 100%;
@@ -149,6 +150,8 @@ width: 100%;
 height: 220px;
 margin-bottom: 20px;
 display: flex;
+gap: 5px;
+
 }
 .sub{
     width: 12.5%;
@@ -183,10 +186,10 @@ justify-content: space-evenly;
     width: 100%;
     height: 100%;
 }
-
-    </style>
+   </style>
 </head>
 <body>
+    
 <div id="Navbar">
     <div id="first">
         <p> <b> SUBSCRIBE NOW </b></p>
