--- a/signin.html
+++ b/signin.html
@@ -19,23 +19,26 @@
             
         </div>
         <div class="sonks">
-            <a href="">
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">
                 <span>Sign in with Google</span>
                 <i class="fa-brands fa-google"></i>
             </a>
         </div>
+        <div id="mess"></div>
         <div id="sonkp">
             <form id="gform">
                 <p>Email Address <span>*</span></p>
                 <input id="email" type="email" name="email" >
                 <p>Password <span>*</span></p>
                 <input id="password" type="password" name="password">
-                <p id="req">Required Fields <span>*</span><span style="color: #7A7A7A; margin-left: 30%;">Forget your password</span></p>
+                <p id="req">* Required Fields <a style="text-decoration: none;" href=""><span style="color: #7A7A7A; margin-left: 33%;;">Forget your password?</span></a></p>
                 <input type="submit" value="Sign in">
             </form>
         </div>
-        <div class="breakdiv"><p id="break-login"><span>or</span> </p></div>
-        <div class="son"><button> Creat an Account</button></div>
+        <div class="breakdiv"><hr><p>Or</p><hr></div>
+        <div class="son"><a href=""><button> Creat an Account</button></a></div>
     </div>
 </body>
 </html>
+<script src="signin.js"> 
+</script>
