--- a/futter.html
+++ b/futter.html
@@ -132,41 +132,41 @@
             </thead>
             <tbody>
                 <tr>
-                 <td class="box" href="https://www.fabbag.com/pages/about-us" > About Us</td> 
+                 <td> <a class="box" href="https://www.fabbag.com/pages/about-us" >  About Us </a></td> 
                 <td>Call : <b>022-6805-6010</b>  <br>
                 (Monday to Friday : 9 AM - 7 PM).</td>
                  <td>Signup for the latest offers, updates and news
                 </td> 
                 </tr>
                 <tr>
-                    <td class="box"> <a href="https://www.fabbag.com/pages/associated-brands"></a>  Associted Brands</td>
+                    <td> <a class="box" href="https://www.fabbag.com/pages/associated-brands">  Associted Brands </a> </td>
                     <td id="ho">Mail : crew@fabbag.com
                     </td>
                     <td> <input type="text" placeholder="Your email address">
                         <button>SUBSCRIBE</button></td></td>
                 </tr>
                 <tr>
-                    <td class="box" > <a  href="https://www.fabbag.com/pages/faq"></a>  FAQ</td>
-                    <td> 
+                    <td> <a class="box"  href="https://www.fabbag.com/pages/faq"> FAQ </a> </td>
+                    <td></td>
                     <td>Dont worry we dont spam
                     </td>
                 </tr>
                 <tr>
-                    <td class="box" >  <a  href="https://www.fabbag.com/pages/collaborate-with-fab-bag" </a>  Collaborate With Fab Bag</td>
+                    <td>  <a  class="box" href="https://www.fabbag.com/pages/collaborate-with-fab-bag">Collaborate With Fab Bag</a></td>
                     
                 </tr>
                 <tr>
-                    <td class="box" > <a href="https://www.fabbag.com/pages/contact-us"></a> Contact Us</td>
+                    <td  > <a class="box" href="https://www.fabbag.com/pages/contact-us"> Contact Us</a></td>
                 </tr>
                 <tr>
-                    <td class="box"> <a href="https://www.fabbag.com/pages/returns-and-refunds" ></a>Returns & Refunds</td>
+                    <td><a class="box" href="https://www.fabbag.com/pages/returns-and-refunds" >Returns & Refunds </a> </td>
                     
                 </tr>
                 <tr>
-                    <td class="box" >  <a href="https://www.fabbag.com/pages/terms-and-conditions"></a> Terms & Conditions</td>
+                    <td> <a class="box"   href="https://www.fabbag.com/pages/terms-and-conditions"> Terms & Conditions </a></td>
                 </tr>
                 <tr>
-                    <td class="box" >  <a href="https://www.fabbag.com/pages/privacy-policy"></a>Privacy Policy</td>
+                    <td> <a class="box" href="https://www.fabbag.com/pages/privacy-policy"> Privacy Policy </a> </td>
                 </tr>
             </tbody>
             </table>
