--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <i id="c" class="fa-brands fa-twitter"></i>
       <i id="d" class="fa-brands fa-youtube"></i>
     </div>
-      <h5>Copyright © 2021 fabbag.com All rights reserved.
+      <h5 id="last_text">Copyright © 2021 fabbag.com All rights reserved.
       </h5>   
     </div>
 </div>                               
