--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <div id="Navbar">
         <div id="first">
-            <p>SUBSCRIBE NOW</p>
+        <a href="./The_Make.html"> <p style="color:#e5b95f ;">SUBSCRIBE NOW</p></a>
         </div>
         <div id="logo">
-            <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/FABBAG-LOGO_96ac9306-4c81-4ab8-8d2b-4e818eed7f76_2048x.png?v=1606482289"
-                alt="Fab bag">
+           <a href="./index.html"> <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/FABBAG-LOGO_96ac9306-4c81-4ab8-8d2b-4e818eed7f76_2048x.png?v=1606482289"
+            alt="Fab bag"></a>
         </div>
         <div id="tools">
             <div>
@@ -32,10 +32,10 @@
             <div class="dropdown">
                 <i class="fa-solid fa-circle-user"></i>
                 <div class="dropdown_menu">
-                    <a href="#">Lamguages: En</a>
+                    <a href="#">Languages: En</a>
                     <a href="#">Checkout</a>
-                    <a href="#">Sign In</a>
-                    <a href="#">Create an Account</a>
+                    <a href="./signin.html">Sign In</a>
+                    <a href="./Create An Account.html">Create an Account</a>
                 </div>
             </div>
             <div>
@@ -84,7 +84,7 @@
     <!-- *******************************  home ************************* -->
 
 <div class="display">
-    <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Women_sPage-2---Skincare-3.gif?v=1655088937" alt="img not found">
+    <a href="./The_Make.html"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/products/Women_sPage-2---Skincare-3.gif?v=1655088937" alt="img not found"></a>
     <button> < </button>
     <button> > </button>
 </div>
@@ -94,32 +94,71 @@
 
 <div id="boxsa">
     <div class="mas">
-        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag-Makeup-Reveal-1_1_f966e732-fa52-4f58-b117-b4ff2b57b163_2048x.png?v=1654234899" alt="">
+       <a href="./The_Make.html"> <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag-Makeup-Reveal-1_1_f966e732-fa52-4f58-b117-b4ff2b57b163_2048x.png?v=1654234899" alt=""></a>
         <p>PLUME PLUSH MATTE LIPSTICK OF YOUR CHOICE!*</p>
     </div>
     <div class="mas">
-        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag-Makeup-Reveal-02_2048x.gif?v=1654408628" alt="">
+        <a href="./The_Make.html"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag-Makeup-Reveal-02_2048x.gif?v=1654408628" alt=""></a>
         <p>C2P PRO EPIC LIP INK SET OR E'CLAT FADEOUT PIGMENT CORRECTING SERUM OR TEEN CEREMONIAL MAKEUP 8 COLOR EYESHADOW KIT* </p>
     </div>
     <div class="mas">
-        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag--Skincare-Reveal-1_e0d6e35d-42cf-410b-9a92-eb0525b4e65c_2048x.png?v=1654580730" alt="">
+        <a href="./The_Make.html"><img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag--Skincare-Reveal-1_e0d6e35d-42cf-410b-9a92-eb0525b4e65c_2048x.png?v=1654580730" alt=""></a>
         <p>THE SOAP COMPANY INDIA FOOT THERAPY</p>
     </div>
     <div class="mas">
-        <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag--Skincare-Reveal-2_e505577a-ac80-4632-aaf1-f125466e35aa_2048x.png?v=1654754547" alt="">
+       <a href="./The_Make.html"> <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/What_s-In-The-Bag--Skincare-Reveal-2_e505577a-ac80-4632-aaf1-f125466e35aa_2048x.png?v=1654754547" alt=""></a>
         <p>BAISER INDIA EYE BROW GROWTH OIL</p>
     </div>
 </div>
 
 <h1 class="heading">SUBSCRIPTION</h1>
-<div class="shubh"></div>
+<div >
+    <div class="td_cont">
+        <div class="ap_tebal_view">
+            <div class="ap_tebel_one">
+                <div>
+                    <h2>1 MONTH</h2>
+                    <p>SUBSCRIPTION</p>
+                </div>
+                <div>
+                    <h2>Rs. 599.00</h2>
+                    <p>/ per monthp</p>
+                </div>
+                <div>
+                    <p>ONE TIME PAYMENT</p>
+                    <h2>Rs. 599.00</h2>
+                </div>
+                <div>
+                    <button class="ap_btn_add">ADD TO CART</button>
+                </div>
 
-<div id="plan">
-    <div class="subsc"></div>
-    <div class="subsc"></div>
+
+            </div>
+            <div class="ap_tebel_two">
+                <div>
+                    <h2>3 MONTHS</h2>
+                    <p>SUBSCRIPTION</p>
+                </div>
+                <div>
+                    <h2>Rs. 533.00</h2>
+                    <p>/ per monthp</p>
+                </div>
+                <div>
+                    <p>ONE TIME PAYMENT (11% OFF)</p>
+                    <div style="display: flex; justify-content: center;">
+                        <h2>Rs. 1,599.00 </h2>
+                        <h2 style="font-weight:500;text-decoration:line-through"> Rs. 1,797</h2>
+                    </div>
+
+                </div>
+                <div>
+                    <button class="ap_btn_add">ADD TO CART</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
-<h1 id="prebox">PREVIOUS BAGS</h1>
-<div class="shubh"></div>
 
 <div id="prod">
     <div class="school">
@@ -192,8 +231,8 @@
               <td> <a class="box" href="https://www.fabbag.com/pages/associated-brands">  Associted Brands </a> </td>
               <td id="ho">Mail : crew@fabbag.com
               </td>
-              <td> <input type="text" placeholder="Your email address">
-                  <button>SUBSCRIBE</button></td></td>
+              <td> <input id="minput" type="text" placeholder="Your email address">
+                  <button id="mbutton">SUBSCRIBE</button></td></td>
           </tr>
           <tr>
               <td> <a class="box"  href="https://www.fabbag.com/pages/faq"> FAQ </a> </td>
