--- a/The_Make.html
+++ b/The_Make.html
@@ -19,8 +19,8 @@
             <p>SUBSCRIBE NOW</p>
         </div>
         <div id="logo">
-            <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/FABBAG-LOGO_96ac9306-4c81-4ab8-8d2b-4e818eed7f76_2048x.png?v=1606482289"
-                alt="Fab bag">
+           <a href="./index.html"> <img src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/FABBAG-LOGO_96ac9306-4c81-4ab8-8d2b-4e818eed7f76_2048x.png?v=1606482289"
+            alt="Fab bag"></a>
         </div>
         <div id="tools">
             <div>
