--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>password Page</title>
     <script src="https://kit.fontawesome.com/ce38e0eef3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./nevbar.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 *{
     margin: 0px;
     padding: 0px;
+    font-family: poppins Sans,sans-serif;
 }
 #gautam{
     margin: auto;
@@ -24,6 +26,7 @@
    font-family: poppins;
    color: #161616;
 }
+/* ***********************social ********************* */
 #gautam>.sonks{
     width: 100%;
     margin: auto;
@@ -58,75 +61,59 @@
 #gautam>.sonks:nth-child(3)>a>i{
     padding: 10px;
 }
-#sonkp{
-    margin: 10px 0px;
-}
-#sonkp>#gform>input{
-    height: 40px;
-    width: 99%;
-    border:0.1px solid lightgray;
-}
-#sonkp>#gform>p{
-    color: #7a7a7a;
-    font-size: 13px;
-    font-family: 'Poppins';
-    margin: 0 0 5px;
-    padding: 0 0 7px;
-    margin: 10px 0px;
-}
-#sonkp>#gform>p>span{
-    color: red;
-}
-#sonkp>#gform>input:last-child{
-    background-color: #e5b95f;
-    font-size: 1.1em;
-    height: 40px;
-    border: none;
-    width: 100%;
-}
-.sonk{
-    width: 1px solid pink;
-    margin: auto;
-    margin-bottom: 50px;
-}
+/* ********************************** */
 h4{
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
     font-family: poppins;
-   color: #161616;
-   font-size: large;
+   color: #333;
+   font-size:700;
 }
 p{
     
    color: #252525;
-   font-size: 20px;
+   font-size: 17px;
+}
+#dis{
+    margin: 10px 0px;
+    line-height: 22px;
+    font-size: 14px;
+}
+#dis>p{
+    margin-bottom: 20px;
 }
 #shiv{
     color: #7D7D7D;
-    font-size: 25px;
+    font-size: 14px;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-family: poppins;
 
 }
+/* **************************input ************************** */
 #krish{
     height: 40px;
-    width: 99%;
+    width: 98%;
     border:0.1px solid lightgray;
-    text-align: center;
+    padding-left: 10px;
 }
 ::placeholder{
-    font-size: 20px;
+    font-size: 16px;
 }
-#ok>button{
-    width: 100%;
+#krish:focus{
+    outline-color:  #e5b95f;
+}
+/* *********************button*********************** */
+#btns{
+    width: 102%;
     background-color: #e5b95f;
     color: #FFFFFF;
     height: 40px;
     font-size: 1.1em;
     border: none;
  }
- #ok>button:hover{
+ #btns:hover{
     color: black;
     border: none;
     cursor: pointer;
@@ -138,6 +125,72 @@ p{
     </style>
 </head>
 <body>
+    <div id="Navbar" style="margin-top: -150px">
+        <div id="first">
+          <p>
+            <a style="text-decoration: none; color: #e5b95f" href="./The_Make.html">SUBSCRIBE NOW
+          </a>
+          </p>
+        </div>
+        <div id="logo">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0052/7551/6995/files/FABBAG-LOGO_96ac9306-4c81-4ab8-8d2b-4e818eed7f76_2048x.png?v=1606482289"
+            alt="Fab bag"
+          />
+        </div>
+        <div id="tools">
+          <div>
+            <i class="fa-solid fa-magnifying-glass" id="search"></i>
+          </div>
+          <div>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="dropdown">
+            <i class="fa-solid fa-circle-user"></i>
+            <div class="dropdown_menu">
+              <a href="#">Languages: En</a>
+              <a href="#">Checkout</a>
+              <a href="./signin.html">Sign In</a>
+              <a href="./Create An Account.html">Create an Account</a>
+            </div>
+          </div>
+          <div>
+            <p class="su_qun">0</p>
+            <i class="fa-solid fa-cart-shopping" id="cart_opan"></i>
+          </div>
+        </div>
+      </div>
+  
+      <!-- ***********************cart*************** -->
+      <div class="su_add_to_cart">
+        <div class="su_add_to_cart_tital">
+          <p>My Cart</p>
+          <i class="fa-solid fa-x" id="idont"></i>
+        </div>
+        <div class="su_product_display">
+          <div class="ap_img_name"></div>
+        </div>
+        <div class="su_total_in">
+          <h2>Total:</h2>
+          <div>
+            <h2>Rs:</h2>
+            <h2 id="total_price_in_nev"></h2>
+          </div>
+        </div>
+        <button>view cart</button>
+        <button>checkout</button>
+      </div>
+  
+      <!--**************** search bar ***************** -->
+  
+      <div class="search_pr">
+        <i class="fa-solid fa-x" id="idont_closs"></i>
+        <p>WHAT ARE YOU LOOKING FOR?</p>
+        <input type="search" id="ap_search_of" placeholder="Search product" />
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
+
+    <!-- **************************************************************enav*************************** -->
     <div id="gautam">
         <div class="sonk"><p>Sign In</p></div>
         <div class="sonks">
@@ -154,11 +207,17 @@ p{
             </a>
         </div>
         <h4>RESET YOUR PASSWORD</h4>
-        <p>We will send you an email to reset your password.</p>
+        <p id="s">We will send you an email to reset your password.</p>
+        <div id="dis"></div>
         <p id="shiv">Email</p>
         <input id="krish" type="email" name="email" placeholder="your-email@shopify.com" >
         <p id="pr">Cancel or</p>
-        <div id="ok"><button> SUBMIT </button></div>
+        <button id="btns" onclick="radhe()"> SUBMIT </button>
     </div>
+
+    <!-- ***********************************************MAYUR********************************************** -->
+    
 </body>
 </html>
+<script src="./forgetpass.js"></script>
+<script src="./nevbar.js"></script>
