--- a/nevbr.html
+++ b/nevbr.html
@@ -33,7 +33,7 @@
             <div class="dropdown">
                 <i class="fa-solid fa-circle-user"></i>
                 <div class="dropdown_menu">
-                    <a href="#">Lamguages: En</a>
+                    <a href="#">Languages: En</a>
                     <a href="#">Checkout</a>
                     <a href="#">Sign In</a>
                     <a href="#">Create an Account</a>
