--- a/The_Make.html
+++ b/The_Make.html
@@ -36,8 +36,8 @@
                 <div class="dropdown_menu">
                     <a href="#">Lamguages: En</a>
                     <a href="#">Checkout</a>
-                    <a href="#">Sign In</a>
-                    <a href="#">Create an Account</a>
+                    <a href="./signin.html">Sign In</a>
+                    <a href="./Create An Account.html">Create an Account</a>
                 </div>
             </div>
 
